# ecs-game-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
demo/hello_world/: main.cpp
demo/hello_world/components/: MessageStatusComponent.h  TextComponent.h
demo/hello_world/systems/: TerminalSystem.h
demo/particle_demo/: Application.cpp  Application.h  main.cpp
demo/particle_demo/components/: ComponentBackgroundImage.h  ComponentButtonImage.h  ComponentButtonState.h  ComponentButtonText.h  ComponentCircle.h  ComponentHud.h  ComponentParticleCount.h  ComponentParticleGroup.h  ComponentPhysics.h  ComponentProjection2D.h  ComponentRectangle.h  ComponentShadow.h  ComponentSprite.h  ComponentTextBox.h  ComponentTrail.h  ComponentTransform.h  ComponentUserControl.h  ComponentWorld.h
demo/particle_demo/engines/: EngineMenu.cpp  EngineMenu.h  EngineParticleSimulator.cpp  EngineParticleSimulator.h
demo/particle_demo/resources/: settings.properties
demo/particle_demo/resources/Text/: about.txt  instructions.txt
demo/particle_demo/systems/: SystemCollider.h  SystemForceAccumulator.h  SystemGravity.h  SystemMenuManager.h  SystemMenuRenderer.h  SystemParticleGroupPropagator.h  SystemPhysics.h  SystemRenderer.h  SystemRepulsion.h
ecs/: ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  Signature.h  System.h  World.cpp  World.h
engine/: ApplicationSettings.h  CommandManager.h  Engine.h  EventManager.h  GlobalCache.h  ResourceManager.h
engine/math/: GMath.h  Vector2D.h  Vector3D.h
engine/platform/: SDLKeyboard.cpp  SDLKeyboard.h  SDLRenderer.cpp  SDLRenderer.h  SDLWindow.cpp  SDLWindow.h
